k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentikube-service
spec:
  selector:
    app: sentikube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
