k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentikube-ingress
  annotations:
spec:
  rules:
    - host: sentikube.local
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: sentikube-service
                port:
                  number: 80
